--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.15.0",
+    "framer-motion": "^12.23.24",
     "ipfs-http-client": "^60.0.1",
     "lucide-react": "^0.544.0",
     "merkletreejs": "^0.6.0",
